--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "dev": "npx tsc && node dist"
   },
   "keywords": [],
@@ -15,5 +15,8 @@
     "opencv-ts": "^1.3.6",
     "sharp": "^0.32.5",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "vitest": "^0.34.3"
   }
 }
